--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
+  <link rel="alternate" href="android-app://ek.totrack.app/https/sgs9s.app.goo.gl" />
+  <link rel="alternate" href="android-app://ek.totrack.app/https/totrack-42d42.firebaseapp.com/__/auth/callback" />
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- Google Maps integration -->
