Add description to office location checkbox.

--- a/src/pages/company/add/company-add.html
+++ b/src/pages/company/add/company-add.html
@@ -19,6 +19,8 @@
 
     <ion-slide style="">
 
+      <h2>Automatically track time</h2>
+      <p>Track time by selecting your office location. If you are at the office the time will automatically start running!</p>
     </ion-slide>
 
     <ion-slide style="background-color: red">
