Fix bug of map not displaying in ion-slide.

--- a/src/pages/company/add/company-add.html
+++ b/src/pages/company/add/company-add.html
@@ -28,7 +28,7 @@
       </ion-list>
     </ion-slide>
 
-    <ion-slide *ngIf="company.locationEnabled">
+    <ion-slide *ngIf="company.locationEnabled" class="full-height">
       <shared-location></shared-location>
     </ion-slide>
 
