--- a/src/pages/company/list/company-list.html
+++ b/src/pages/company/list/company-list.html
@@ -15,7 +15,7 @@
       (ionSwipe)="deleteCompany(company)">
       <ion-item>
         <ion-avatar item-start>
-          <ion-icon name="create"></ion-icon>
+          <ion-icon name="home"></ion-icon>
         </ion-avatar>
         <h2>{{ company.name }}</h2>
       </ion-item>
