--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- Google Maps integration -->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCKBpUMaUPhDdLkImzmEv4ejQBj3UARJww"></script>
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCKBpUMaUPhDdLkImzmEv4ejQBj3UARJww&libraries=places"></script>
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
