Get location data from edit page and pass it to the shared location component.

--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -6,5 +6,5 @@
   </ion-navbar>
 </ion-header>
 <ion-content>
-  <shared-location></shared-location>
+  <shared-location [location]="location"></shared-location>
 </ion-content>
