👷🏼 Implement new User model.

--- a/src/user/user.html
+++ b/src/user/user.html
@@ -14,7 +14,7 @@
 	    <p>{{ user.email }}</p>
 	  </ion-item>
 		<ion-card-content>
-			<p>You have connected using {{ user.providerData[0].providerId }}.<br></p>
+			<p>You have connected using {{ user.providerId }}.<br></p>
 		</ion-card-content>
     <ion-list>
       <button ion-item block (click)="logout()">
