📝 Selected address is now written back to the search input field.

--- a/src/shared/location/location.html
+++ b/src/shared/location/location.html
@@ -8,7 +8,7 @@
 </ion-fab>
 <ion-header>
   <ion-item>
-    <ion-input id="search" type="text" name="search" placeholder="Search ..."></ion-input>
+    <ion-input id="search" type="text" name="search" placeholder="Search ..." [(ngModel)]="searchInput"></ion-input>
   </ion-item>
 </ion-header>
 <div #map id="map"></div>
