--- a/src/shared/location/location.html
+++ b/src/shared/location/location.html
@@ -1,5 +1,5 @@
 <ion-fab right middle>
-  <button ion-fab (click)="addMarker()" *ngIf="!marker">
+  <button ion-fab (click)="setMarker()" *ngIf="!marker">
     <ion-icon name="pin"></ion-icon>
   </button>
   <button ion-fab (click)="removeMarker()" *ngIf="marker" color="danger">
