🗑 Add delete option on company edit page.

--- a/src/pages/company/edit/company-edit.html
+++ b/src/pages/company/edit/company-edit.html
@@ -28,4 +28,12 @@
       </button>
     </ion-item-group>
   </ion-list>
+  <ion-footer>
+    <ion-toolbar>
+      <button ion-button block large icon-left (click)="deleteCompany(company)" color="danger">
+        <ion-icon name="trash"></ion-icon>
+        Delete
+      </button>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
