😬 Use correct class to set background.

--- a/src/user/user.html
+++ b/src/user/user.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="cards-bg">
+<ion-content class="outer-content">
   <ion-card>
 		<ion-item>
 	    <ion-avatar item-start *ngIf="user.photoURL">
