🇦Add header for location

--- a/src/pages/company/edit/company-edit.html
+++ b/src/pages/company/edit/company-edit.html
@@ -12,6 +12,9 @@
         <ion-label fixed>Company</ion-label>
         <ion-input type="text" [(ngModel)]="company.name"></ion-input>
       </ion-item>
+    </ion-item-group>
+    <ion-list-header>Location</ion-list-header>
+    <ion-item-group>
       <ion-item>
         <ion-icon name="navigate" item-start color="primary"></ion-icon>
         <ion-label>Location enabled</ion-label>
