📝 Show version information on iOS and Android

--- a/src/user/user.html
+++ b/src/user/user.html
@@ -38,4 +38,10 @@
 			</button>
     </ion-list>
 	</ion-card>
+  <ion-card *ngIf="!isMobileWeb">
+		<ion-item>
+	    <h2>{{ appName }}</h2>
+      <p>Version: {{ appVersionNumber }}</p>
+	  </ion-item>
+	</ion-card>
 </ion-content>
