--- a/src/pages/company/list/company-list.html
+++ b/src/pages/company/list/company-list.html
@@ -9,6 +9,7 @@
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
+  <ion-spinner *ngIf="loading"></ion-spinner>
   <ion-list>
     <ion-item-sliding
       *ngFor="let company of companies"
