⏰ Add, delete and list hours using Firebase

--- a/src/pages/hours/hours.html
+++ b/src/pages/hours/hours.html
@@ -23,8 +23,8 @@
         <ion-avatar item-start>
           <ion-icon name="create"></ion-icon>
         </ion-avatar>
-        <h2>Today</h2>
-        <h3>08:00 - now</h3>
+        <h2>{{hour.start}}</h2>
+        <h3>{{hour.start}} - {{hour.end}}</h3>
         <p ion-button clear item-end>{{hour.client}} - {{hour.duration}}</p>
       </ion-item>
       <ion-item-options side="right">
