👀 Consistent content background

--- a/src/pages/company/list/company-list.html
+++ b/src/pages/company/list/company-list.html
@@ -3,7 +3,7 @@
     <ion-title>Companies</ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content>
+<ion-content class="outer-content">
   <ion-fab right bottom>
     <button ion-fab (click)="addCompany()">
       <ion-icon name="add"></ion-icon>
