--- a/src/pages/hours/hours.html
+++ b/src/pages/hours/hours.html
@@ -14,7 +14,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="outer-content">
   <ion-list>
     <ion-item-sliding
       (ionSwipe)="deleteHour(item)"
