🕒 Reformat hour list view

--- a/src/pages/hours/hours.html
+++ b/src/pages/hours/hours.html
@@ -24,9 +24,9 @@
         <ion-avatar item-start>
           <ion-icon name="stopwatch"></ion-icon>
         </ion-avatar>
-        <h2>{{hour.client}} - {{hour.title}}</h2>
-        <h3>{{hour.start}} - {{hour.end}}</h3>
-        <p ion-button clear item-end>{{hour.duration}}</p>
+        <h2>{{hour.client}} <small>- {{hour.title}}</small></h2>
+        <p>{{hour.startFormatted}} - {{hour.endFormatted}}</p>
+        <p ion-button clear item-end>{{hour.durationFormatted}}</p>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button (click)="editHour(hour)" color="primary">
