🗺 Move location page to child of company and fix editing location.

--- a/src/pages/company/edit/company-edit.html
+++ b/src/pages/company/edit/company-edit.html
@@ -22,7 +22,7 @@
       </ion-item>
       <button
         ion-item
-        (click)="toLocation(company.location)"
+        (click)="toLocation(company)"
         *ngIf="company.locationEnabled">
         <ion-icon name="navigate" item-start color="primary"></ion-icon>
         <ion-label *ngIf="company.location">{{ company.location.address }}</ion-label>
