🕛 Show company name while recording

--- a/src/pages/hours/list/hour-list.html
+++ b/src/pages/hours/list/hour-list.html
@@ -9,7 +9,7 @@
 <ion-header *ngIf="recording">
   <ion-navbar color="secondary">
     <ion-title>
-      {{ time }} - {{ hour.client }}
+      {{ time }} - {{ companyName }}
     </ion-title>
   </ion-navbar>
 </ion-header>
