🕒 Add avatar in list if timer is running

--- a/src/pages/company/list/company-list.html
+++ b/src/pages/company/list/company-list.html
@@ -15,11 +15,11 @@
       *ngFor="let company of companies"
       (ionSwipe)="deleteCompany(company)">
       <ion-item>
-        <ion-avatar item-start id="ion-avatar-start">
+        <ion-avatar item-start class="ion-avatar-start">
           <ion-icon name="home"></ion-icon>
         </ion-avatar>
         <h2>{{ company.name }}</h2>
-        <ion-avatar item-end *ngIf="company.locationEnabled" id="ion-avatar-end">
+        <ion-avatar item-end *ngIf="company.locationEnabled" class="ion-avatar-end">
           <ion-icon name="navigate"></ion-icon>
         </ion-avatar>
       </ion-item>
