😇 Use actionsheet interface to match interface when starting recording

--- a/src/pages/hours/edit/hour-edit.html
+++ b/src/pages/hours/edit/hour-edit.html
@@ -10,7 +10,7 @@
       <ion-item>
         <ion-icon name="home" item-start color="primary"></ion-icon>
         <ion-label>Company</ion-label>
-        <ion-select [(ngModel)]="hour.company">
+        <ion-select [(ngModel)]="hour.company" interface="action-sheet">
           <ion-option
             [value]="company.key"
             *ngFor="let company of companies">{{company.name}}</ion-option>
